--- a/static/css/index.css
+++ b/static/css/index.css
@@ -137,5 +137,15 @@ body {
   font-size: 0.95em;
 }
 
+.carousel.results-carousel {
+  margin: 0 auto !important;
+  max-width: 900px;
+}
+.carousel.results-carousel .item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 
